# show_txt_records

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  gunicorn.conf.py  logger.py  main.py  redis_cache.py
